cluster/istio/observability/jaeger/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-observability
spec:
  hosts:
    - 'jaeger.${DOMAIN_2}'
  gateways:
    - istio-ingress/istio-private-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-query.istio-observability.svc.cluster.local
